--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.8",
+    "@supabase/supabase-js": "^2.49.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -68,6 +68,8 @@
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.12.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.1",
