--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "docker:build": "docker build -t crm-saas .",
+    "docker:run": "docker run -p 3000:3000 crm-saas",
+    "docker:compose": "docker-compose up -d",
+    "docker:down": "docker-compose down"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -52,6 +56,7 @@
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
     "install": "^0.13.0",
+    "ioredis": "^5.6.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.446.0",
     "next": "14.1.0",
@@ -85,6 +90,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.10",
     "@types/nodemailer": "^6.4.17",
