--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/stripe-js": "^6.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.5.2",
@@ -73,6 +74,7 @@
     "recharts": "^2.12.0",
     "socket.io": "^4.8.1",
     "sonner": "^1.7.2",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
