--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.12.0",
+    "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "sonner": "^1.7.2",
     "stripe": "^17.7.0",
